# tvision

./: .gitignore  .travis.yml  CMakeLists.txt  COPYRIGHT  Case  Makefile  README.md  todo.txt  tvhc  tvision.kdev4  undefs.txt
.github/workflows/: cmake.yml
.kdev4/: tvision.kdev4
examples/: CMakeLists.txt
examples/mmenu/: mmenu.cpp  mmenu.h  test.cpp
examples/palette/: README.md  palette.cpp
examples/tvdemo/: CMakeLists.txt  ascii.cpp  ascii.h  backgrnd.cpp  calc.cpp  calc.h  calendar.cpp  calendar.h  demohelp.h  evntview.cpp  evntview.h  fileview.cpp  fileview.h  gadgets.cpp  gadgets.h  makefile  mousedlg.cpp  mousedlg.h  puzzle.cpp  puzzle.h  tvcmds.h  tvdemo.h  tvdemo1.cpp  tvdemo2.cpp  tvdemo3.cpp
examples/tvdir/: makefile  tvdir.cpp
examples/tvedit/: makefile  tvedit.h  tvedit1.cpp  tvedit2.cpp  tvedit3.cpp
examples/tvforms/: CMakeLists.txt  datacoll.cpp  datacoll.h  fields.cpp  fields.h  formcmds.h  forms.cpp  forms.h  genform.cpp  genforms.mak  genparts.h  genphone.h  listdlg.cpp  listdlg.h  makefile  tvforms.cpp
examples/tvhc/: makefile  tvhc.cpp  tvhc.h
examples/tvhelp/: makefile  tvhc.cpp  tvhc.h
include/: _string.h  app.h  assert.h  buffers.h  colorsel.h  config.h  debugAsm.h  dialogs.h  dir.h  dos.h  drawbuf.h  editors.h  fstream.h  hardware.h  help.h  helpbase.h  iomanip.h  iostream.h  mem.h  menus.h  msgbox.h  objects.h  pch.h  platform.h  resource.h  stddlg.h  string.h  strstrea.h  system.h  textview.h  tkeys.h  tobjstrm.h  ttypes.h  tv.h  tvobjs.h  utf8.h  util.h  views.h
include/general/: assert.h  excpt.h  io.h
include/internal/: ansidisp.h  array2d.h  buffdisp.h  codepage.h  cursor.h  filesys.h  findfrst.h  getenv.h  gpminput.h  linuxcon.h  ncurdisp.h  ncursinp.h  platform.h  sighandl.h  sigwinch.h  textattr.h  utf8.h
include/override/: _defs.h  _null.h  alloc.h  assert.h  dir.h  fstream.h  io.h  iostream.h  mem.h  string.h  windows.h
include/tvision/: app.h  buffers.h  colors.h  colorsel.h  config.h  dialogs.h  drawbuf.h  editors.h  hardware.h  help.h  helpbase.h  menus.h  msgbox.h  objects.h  outline.h  resource.h  scrncell.h  stddlg.h  surface.h  system.h  textview.h  tkeys.h  tobjstrm.h  tspan.h  tstrview.h  ttext.h  ttypes.h  tv.h  tvobjs.h  util.h  validate.h  views.h
include/tvision/borland/: _defs.h  _null.h  alloc.h  dir.h  dos.h  fstream.h  io.h  iomanip.h  iostream.h  mem.h  windows.h
include/tvision/borland/malloc/: malloc.h
include/tvision/compat/: _defs.h  _null.h  alloc.h  dir.h  dos.h  excpt.h  io.h  iomanip.h  iosfwd.h  iostream.h  mem.h  strstrea.h  win.h
include/tvision/compat/borland/: dir.h
include/tvision/compat/windows/: windows.h
include/tvision/internal/: ansidisp.h  ansiwrit.h  base64.h  buffdisp.h  codepage.h  conctl.h  constarr.h  constmap.h  cursor.h  dispbuff.h  erredir.h  events.h  far2l.h  findfrst.h  getenv.h  gpminput.h  iosfwd.h  linuxcon.h  ncurdisp.h  ncursinp.h  pathconv.h  platform.h  scrlife.h  sighandl.h  sigwinch.h  stdioctl.h  stdiorec.h  strings.h  termdisp.h  terminal.h  termio.h  textattr.h  unixcon.h  utf8.h  win32con.h  winwidth.h
include/tvision/unstable/: scrncell.h  unicode.h
include/windows/: cderr.h  commdlg.h  dde.h  ddeml.h  dlgs.h  drivinit.h  lzexpand.h  mmsystem.h  nb30.h  ole.h  shellapi.h  winbase.h  wincon.h  windef.h  windows.h  winerror.h  wingdi.h  winmm.h  winnetwk.h  winnls.h  winnt.h  winperf.h  winreg.h  winsock.h  winspool.h  winsvc.h  winuser.h  winver.h
project/: build.txt  makefile  tvision.ide
source/: CMakeLists.txt  colorsel.cpp  drivers.cpp  drivers2.cpp  edits.asm  editstat.cpp  framelin.asm  geninc.cpp  grp.cpp  hardware.asm  hardwrvr.cpp  help.cpp  helpbase.cpp  histlist.cpp  makefile  mapcolor.cpp  menu.cpp  misc.cpp  msgbox.cpp  new.cpp  newstr.cpp  nmbkgrnd.cpp  nmbutton.cpp  nmchdrdl.cpp  nmchkbox.cpp  nmclrsel.cpp  nmclustr.cpp  nmcollct.cpp  nmdialog.cpp  nmdirbox.cpp  nmdircol.cpp  nmdsktop.cpp  nmeditor.cpp  nmfilcol.cpp  nmfildlg.cpp  nmfillst.cpp  nmframe.cpp  nmgroup.cpp  nmhist.cpp  nminptln.cpp  (+130 more)
source/linux/: ansidisp.cpp  buffdisp.cpp  cursor.cpp  dir.cpp  fdinput.cpp  findfrst.cpp  gpminput.cpp  hardware.cpp  linuxcon.cpp  ncurdisp.cpp  ncursinp.cpp  sighandl.cpp  sigwinch.cpp  strings.cpp  tables.cpp  win32con.cpp  winwidth.cpp
source/ncurses/: ncurdisp.cpp  screen.cpp
source/platform/: ansidisp.cpp  ansiwrit.cpp  asyncinp.cpp  base64.cpp  buffdisp.cpp  codepage.cpp  colors.cpp  conctl.cpp  cursor.cpp  dir.cpp  dispbuff.cpp  erredir.cpp  events.cpp  far2l.cpp  fdinput.cpp  findfrst.cpp  gpminput.cpp  hardware.cpp  linuxcon.cpp  ncurdisp.cpp  ncursinp.cpp  platfchr.cpp  platfcon.cpp  platform.cpp  scrlife.cpp  sighandl.cpp  sigwinch.cpp  stdioctl.cpp  stdiorec.cpp  strings.cpp  tables.cpp  termdisp.cpp  terminal.cpp  termio.cpp  ttext.cpp  unixclip.cpp  unixcon.cpp  win32con.cpp  winwidth.cpp
source/tvision/: colorsel.cpp  drivers.cpp  drivers2.cpp  edits.asm  edits.cpp  editstat.cpp  fmtstr.cpp  framelin.asm  framelin.cpp  geninc.cpp  grp.cpp  hardware.asm  hardwrvr.cpp  help.cpp  helpbase.cpp  histlist.cpp  makefile  mapcolor.cpp  menu.cpp  misc.cpp  msgbox.cpp  new.cpp  newstr.cpp  nmbkgrnd.cpp  nmchdrdl.cpp  nmchkbox.cpp  nmcollct.cpp  nmdialog.cpp  nmdirbox.cpp  nmdircol.cpp  nmdsktop.cpp  nmeditor.cpp  nmfilcol.cpp  nmfildlg.cpp  nmfillst.cpp  nmframe.cpp  nmhist.cpp  nminptln.cpp  nmlstbox.cpp  nmlstvwr.cpp  (+112 more)
test/: CMakeLists.txt  test.h  test_charops.cpp  test_charops.h  test_operators.h
test/platform/: base64.test.cpp  endian.test.cpp  far2l.test.cpp  scrncell.test.cpp  sighandl.test.cpp  terminal.test.cpp  terminal.test.h  termio.test.cpp  termio.test.h  ttext.test.cpp  utf8.test.cpp
test/tvision/: teditor.test.cpp  tkey.test.cpp  tmnuview.test.cpp  ttimerqu.test.cpp
